--- a/index.html
+++ b/index.html
@@ -430,6 +430,7 @@
         </div>
       </section>
     </main>
+
     <!------------------footer------------>
     <footer class="footer">
       <div class="container container-wpapper-footer">
@@ -478,5 +479,92 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-btn-x" type="button">
+          <svg class="icon-x" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="text-modal">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="modal-label">Name</label>
+            <div class="modal-input-wrapp">
+              <input
+                type="text"
+                name="user-name"
+                class="modal-input"
+                id="user-name"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field">
+            <label for="user--tel" class="modal-label">Phone</label>
+            <div class="modal-input-wrapp">
+              <input
+                type="tel"
+                name="user-tel"
+                class="modal-input"
+                id="user--tel"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="modal-label">Email</label>
+            <div class="modal-input-wrapp">
+              <input
+                type="email"
+                name="user-email"
+                class="modal-input"
+                id="user-email"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-fiel">
+            <label for="user-comment" class="modal-label">Comment</label>
+            <textarea
+              class="input-coment-modal"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              name="privacy"
+              required
+              id="privacy"
+              class="modal-check visually-hidden"
+            />
+            <label for="privacy" class="check-text">
+              <span class="check-check"
+                ><svg class="modal-check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="check-link" href=""> Privacy Policy</a> >
+            </label>
+          </div>
+          <button class="btn-modal-send" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
