--- a/index.html
+++ b/index.html
@@ -477,9 +477,20 @@
             </li>
           </ul>
         </div>
+<div class="container-input">
+        <p class="footer-title">Subscribe</p>
+        <form>
+          <label>
+            <input
+              type="email"
+              name="footer-email"
+              class="footer-email"
+          </label>
+          <button type="submit">Subscribe</button>
+        </form>
       </div>
     </footer>
-
+</div>
     <div class="backdrop">
       <div class="modal">
         <button class="modal-btn-x" type="button">
