--- a/index.html
+++ b/index.html
@@ -484,7 +484,9 @@
             <input
               type="email"
               name="footer-email"
+              placeholder="E-mail"
               class="footer-email"
+            />
           </label>
           <button type="submit">Subscribe</button>
         </form>
