--- a/index.html
+++ b/index.html
@@ -478,7 +478,8 @@
           </ul>
         </div>
 <div class="container-input">
-        <p class="footer-title">Subscribe</p>
+        <p class="footer-title footer-input">Subscribe</p>
+        
         <form>
           <label>
             <input
@@ -488,7 +489,10 @@
               class="footer-email"
             />
           </label>
-          <button type="submit">Subscribe</button>
+          <button class="footer-submit-btn" type="submit">Subscribe</button>
+          <svg class="icon-frame" width="24" height="24">
+            <use href="./images/icons.svg#icon-Frame"></use>
+          </svg>
         </form>
       </div>
     </footer>
