--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
       </div>
     </footer>
 </div>
-    <div class="backdrop">
+    <div class="backdrop visually-hidden">
       <div class="modal">
         <button class="modal-btn-x" type="button">
           <svg class="icon-x" width="8" height="8">
