--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
 <div class="container-input">
         <p class="footer-title footer-input">Subscribe</p>
         
-        <form>
-          <label>
+        <form class="footer-input-sub">
+          <label class="label-sub">
             <input
               type="email"
               name="footer-email"
@@ -489,10 +489,10 @@
               class="footer-email"
             />
           </label>
-          <button class="footer-submit-btn" type="submit">Subscribe</button>
-          <svg class="icon-frame" width="24" height="24">
+          <button class="footer-submit-btn" type="submit">Subscribe<svg class="icon-frame" width="24" height="24">
             <use href="./images/icons.svg#icon-Frame"></use>
-          </svg>
+          </svg></button>
+          
         </form>
       </div>
     </footer>
