--- a/index.html
+++ b/index.html
@@ -477,26 +477,28 @@
             </li>
           </ul>
         </div>
-<div class="container-input">
-        <p class="footer-title footer-input">Subscribe</p>
-        
-        <form class="footer-input-sub">
-          <label class="label-sub">
-            <input
-              type="email"
-              name="footer-email"
-              placeholder="E-mail"
-              class="footer-email"
-            />
-          </label>
-          <button class="footer-submit-btn" type="submit">Subscribe<svg class="icon-frame" width="24" height="24">
-            <use href="./images/icons.svg#icon-Frame"></use>
-          </svg></button>
-          
-        </form>
+        <div class="container-input">
+          <p class="footer-title footer-input">Subscribe</p>
+
+          <form class="footer-input-sub">
+            <label class="label-sub">
+              <input
+                type="email"
+                name="footer-email"
+                placeholder="E-mail"
+                class="footer-email"
+              />
+            </label>
+            <button class="footer-submit-btn" type="submit">
+              Subscribe<svg class="icon-frame" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
-</div>
+
     <div class="backdrop visually-hidden">
       <div class="modal">
         <button class="modal-btn-x" type="button">
