--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
       </div>
     </footer>
 
-    <div class="backdrop visually-hidden">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-btn-x" type="button">
           <svg class="icon-x" width="8" height="8">
@@ -566,12 +566,13 @@
           <div class="modal-field">
             <input
               type="checkbox"
-              name="privacy"
+              name="user-privacy"
               required
-              id="privacy"
+              id="user-privacy"
               class="modal-check visually-hidden"
+              value="true"
             />
-            <label for="privacy" class="check-text">
+            <label for="user-privacy" class="check-text">
               <span class="check-check"
                 ><svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
