--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
               value="true"
             />
             <label for="user-privacy" class="check-text">
-              <span class="check-check"
+              <span class="check-check grt"
                 ><svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
