--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop is-close>
       <div class="modal">
         <button class="modal-btn-x" type="button">
           <svg class="icon-x" width="8" height="8">
