--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </a>
           <ul class="heder-menu-list">
             <li class="heder-menu-item">
-              <a class="header-href current" href="./index.html">Studio</a>
+              <a class="header-href current" href="./studio.html">Studio</a>
             </li>
             <li class="heder-menu-item">
               <a class="header-href" href="">Portfolio</a>
