--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <nav class="header-navigation">
+        <nav class="nav">
           <a class="header-logo" href="./index.html"
             >Web<span class="header-web">Studio</span>
           </a>
